--- a/index.html
+++ b/index.html
@@ -5,16 +5,12 @@
   <title>💰 Controle Financeiro</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Estilo -->
+  <!-- CSS -->
   <link rel="stylesheet" href="style.css">
 
   <!-- Chart.js -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
-  <!-- jsPDF (uso futuro) -->
-  <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
 </head>
-
 <body>
 
 <header>
@@ -24,39 +20,32 @@
 
 <main>
 
-  <!-- MÊS EM VIGÊNCIA -->
+  <!-- MÊS -->
   <section class="input-section">
     <h2>📅 Mês em Vigência</h2>
     <div class="form">
       <select id="mesAtivo">
-        <option value="1">Janeiro</option>
-        <option value="2">Fevereiro</option>
-        <option value="3">Março</option>
-        <option value="4">Abril</option>
-        <option value="5">Maio</option>
-        <option value="6">Junho</option>
-        <option value="7">Julho</option>
-        <option value="8">Agosto</option>
-        <option value="9">Setembro</option>
-        <option value="10">Outubro</option>
-        <option value="11">Novembro</option>
-        <option value="12">Dezembro</option>
+        <option value="1">Janeiro</option><option value="2">Fevereiro</option>
+        <option value="3">Março</option><option value="4">Abril</option>
+        <option value="5">Maio</option><option value="6">Junho</option>
+        <option value="7">Julho</option><option value="8">Agosto</option>
+        <option value="9">Setembro</option><option value="10">Outubro</option>
+        <option value="11">Novembro</option><option value="12">Dezembro</option>
       </select>
-      <input id="anoAtivo" type="number" placeholder="Ano">
+      <input id="anoAtivo" type="number">
       <button onclick="atualizarMesAtivo()">Aplicar</button>
     </div>
   </section>
 
   <!-- RENDA -->
   <section class="input-section">
-    <h2>💼 Renda do Mês</h2>
-
+    <h2>💼 Renda</h2>
     <div class="form">
       <input id="rendaPrincipal" type="number" placeholder="Renda principal">
-      <button onclick="salvarRendaPrincipal()">Salvar Renda</button>
+      <button onclick="salvarRendaPrincipal()">Salvar</button>
     </div>
 
-    <h3 style="margin-top:1rem;">➕ Rendas Extras</h3>
+    <h3>➕ Renda Extra</h3>
     <div class="form">
       <input id="descricaoRendaExtra" placeholder="Descrição">
       <input id="valorRendaExtra" type="number" placeholder="Valor">
@@ -66,68 +55,30 @@
     <ul id="listaRendasExtras"></ul>
   </section>
 
-  <!-- DASHBOARD -->
+  <!-- CARDS -->
   <section class="cards">
-    <div class="card blue"><h3>💼 Renda</h3><p id="rendaEl">R$ 0,00</p></div>
-    <div class="card yellow"><h3>💛 Extra</h3><p id="rendaExtraEl">R$ 0,00</p></div>
-    <div class="card red"><h3>💸 Gastos</h3><p id="gastosEl">R$ 0,00</p></div>
-    <div class="card green"><h3>💰 Sobra</h3><p id="sobraEl">R$ 0,00</p></div>
+    <div class="card blue"><h3>Renda</h3><p id="rendaEl">R$ 0,00</p></div>
+    <div class="card yellow"><h3>Extra</h3><p id="rendaExtraEl">R$ 0,00</p></div>
+    <div class="card red"><h3>Gastos</h3><p id="gastosEl">R$ 0,00</p></div>
+    <div class="card green"><h3>Sobra</h3><p id="sobraEl">R$ 0,00</p></div>
   </section>
 
-  <!-- GRÁFICOS GERAIS -->
+  <!-- GRÁFICOS -->
   <section class="charts">
     <div class="chart-box"><canvas id="barChart"></canvas></div>
     <div class="chart-box"><canvas id="pieChart"></canvas></div>
-  </section>
-
-  <!-- DASHBOARD DE CARTÕES -->
-  <section class="input-section">
-    <h2>📊 Dashboard de Cartões</h2>
-    <div class="form">
-      <select id="cartaoDashboard">
-        <option value="">Todos os cartões</option>
-      </select>
-    </div>
-    <div class="charts">
-      <div class="chart-box">
-        <canvas id="cartaoChart"></canvas>
-      </div>
-    </div>
   </section>
 
   <!-- CARTÕES -->
   <section class="input-section">
     <h2>💳 Cartões</h2>
     <div class="form">
-      <input id="cartaoNome" placeholder="Nome do cartão">
+      <input id="cartaoNome" placeholder="Nome">
       <input id="cartaoFechamento" type="number" placeholder="Fechamento">
       <input id="cartaoVencimento" type="number" placeholder="Vencimento">
-      <button onclick="salvarCartao()">Salvar / Atualizar</button>
+      <button onclick="salvarCartao()">Salvar</button>
     </div>
     <ul id="listaCartoes"></ul>
-  </section>
-
-  <!-- COMPRA PARCELADA -->
-  <section class="input-section">
-    <h2>🛒 Compra Parcelada</h2>
-    <div class="form">
-      <select id="compraCartao"></select>
-      <input id="compraDescricao" placeholder="Descrição">
-      <input id="compraValor" type="number" placeholder="Valor total">
-      <input id="compraParcelas" type="number" placeholder="Parcelas">
-      <input id="compraMes" type="number" placeholder="Mês inicial">
-      <input id="compraAno" type="number" placeholder="Ano inicial">
-      <button onclick="
-        registrarCompraParcelada(
-          compraCartao.value,
-          compraDescricao.value,
-          +compraValor.value,
-          +compraParcelas.value,
-          +compraMes.value,
-          +compraAno.value
-        )
-      ">Registrar</button>
-    </div>
   </section>
 
   <!-- ASSINATURAS -->
@@ -142,62 +93,31 @@
     <ul id="listaAssinaturas"></ul>
   </section>
 
-  <!-- ASSINATURAS × RENDA -->
-  <section class="input-section">
-    <h2>📊 Assinaturas x Renda</h2>
-    <div class="charts">
-      <div class="chart-box">
-        <canvas id="assinaturaChart"></canvas>
-      </div>
-    </div>
-    <div id="impactoAssinaturas"></div>
-  </section>
-
   <!-- LANÇAMENTOS -->
   <section class="tabela">
-    <h2>📋 Lançamentos do Mês</h2>
+    <h2>📋 Lançamentos</h2>
     <table>
       <thead>
-        <tr>
-          <th>Tipo</th>
-          <th>Categoria</th>
-          <th>Descrição</th>
-          <th>Valor</th>
-          <th>Cartão</th>
-          <th>Ação</th>
-        </tr>
+        <tr><th>Tipo</th><th>Categoria</th><th>Descrição</th><th>Valor</th><th>Cartão</th><th>Ação</th></tr>
       </thead>
       <tbody id="tabela"></tbody>
     </table>
   </section>
 
   <!-- BACKUP -->
-<section class="backup">
-  <h2>💾 Backup</h2>
-  <div class="form">
-    <button type="button" onclick="exportarBackup()">⬇️ Exportar Backup</button>
+  <section class="backup">
+    <h2>💾 Backup</h2>
+    <div class="form">
+      <button onclick="exportarBackup()">Exportar</button>
+      <input type="file" id="importFile" accept=".json">
+      <button onclick="importarBackup()">Importar</button>
+    </div>
+  </section>
 
-    <!-- input escondido -->
-    <input
-      type="file"
-      id="importFile"
-      accept=".json"
-      style="display:none"
-      onchange="importarBackupArquivo(this)"
-    >
-
-    <button type="button" onclick="document.getElementById('importFile').click()">
-      ⬆️ Importar Backup
-    </button>
-  </div>
-</section>
 </main>
 
-<footer>
-  <p>Controle Financeiro • GitHub Pages</p>
-</footer>
+<footer>Controle Financeiro • Local / GitHub Pages</footer>
 
-<script src="script.js" defer></script>
+<script src="script.js"></script>
 </body>
 </html>
-
